Major changes between version 0.16 and 0.98.2.
----------------------------------------------
  - Performance improvements to dctrl.
  - Added a metric option (inspired by Erik Muller).
  - Fixed a memory leak when the connection queue was flushed
    as the link came up.
  - Added the FLB fix (found on ftp.inr.ac.ru/ip-routing).
  - Fixed typo that disabled the scheduling class option.


Major changes between version 0.16 and 0.98.1.
----------------------------------------------
  - Added the ip-goingdown script patch.
  - Removed the fatal and stray signal trapping completely. It just
    doesn't seem worth it.
  - Hybrid mode support. If the device used starts with '/' the
    configured mode (usually either ppp or a slip variant) is
    used. Otherwise device mode is used. This should allow a
    set of devices to mix, say, ippp<n> or isdn<n> with modem
    fallback using ppp or slip. It is not currently possible
    to mix ppp and slip - it is under consideration.
  - The location of the file used for simple authentication
    on TCP connections is now a config option.


Major changes between version 0.16 and 0.98.0.
----------------------------------------------
  - Added a demand/nodemand option that controls whether outgoing
    connections are done on demand or not. Manual connections
    (using "up") work regardless or whether demand is enabled
    or not. (A "block" will prevent *all* outgoing connections,
    both demand and manual).
  - A down or block breaks out of a cycle of repeated connect
    script failures.
  - A down request now aborts an in progress dial/connect script.
  - Call duration is now measured from the moment we try and start
    the link rather than when the link actually becomes up for
    network traffic. This makes more sense because chargable
    duration is from the moment the physical layer (modem etc.)
    is connected and not from when the network layer is connected.