@@ -243,6 +243,7 @@ int pidstring;
 char *run_prefix;
 char *diald_config_file;
 char *diald_defs_file;
+char *path_ip;
 char *path_route;
 char *path_ifconfig;
 char *path_bootpc;
@@ -466,8 +467,8 @@ int next_alarm(void);
 void buffer_packet(unsigned int,unsigned char *);
 void forward_buffer(void);
 void run_state_script(char *name, char *script, int background);
-void set_ptp(char *, int, char *, int);
-void del_ptp(char *, int, char *);
+void set_ptp(char *, int, char *, char *, int);
+void del_ptp(char *, int, char *, char *, int);
 void add_routes(char *, int, char *, char *, int);
 void del_routes(char *, int, char *, char *, int);
 void pipe_init(char *, int, int, PIPE *, int);
